--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,5 +1,9 @@
 {{define "nav"}}
     <nav>
-        <a href="/">Home</a>
+        <div>
+            <a href="/">Home</a>
+            <a href="/feed/create">Add Feed</a>
+            <a href="/feeds">Feeds</a>
+        </div>
     </nav>
 {{end}}
