--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -1,6 +1,6 @@
 {{define "base"}}
     <!doctype html>
-    <html lang="end">
+    <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>{{template "title" .}} - Feeder</title>
@@ -9,14 +9,24 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700">
     </head>
     <body>
+
     <header>
-        <h1><a href="/">Feedcreator</a> </h1>
+        <h1><a href="/">Feedcreator</a></h1>
     </header>
+
     {{template "nav" .}}
+
     <main>
+        {{with .Flash}}
+            <div class="flash">{{.}}</div>
+        {{end}}
         {{template "main" .}}
     </main>
-    <footer>Powered by <a href="https://golang.org">Go</a> </footer>
+
+    <footer>
+        Powered by <a href="https://golang.org">Go</a> in {{.CurrentYear}}
+    </footer>
+
     <script src="/static/js/main.js" type="text/javascript"></script>
     </body>
     </html>
