--- a/ui/html/pages/home.tmpl
+++ b/ui/html/pages/home.tmpl
@@ -1,6 +1,6 @@
 {{define "title"}}Home{{end}}
 
 {{define "main"}}
-    <h2>Latest Feeds</h2>
-    <p>There's nothing to see here yet!</p>
+    <p>This application can be used to turn any website into RSS feed</p>
+    <p>It can be self hosted.</p>
 {{end}}
