--- a/ui/html/pages/view.tmpl
+++ b/ui/html/pages/view.tmpl
@@ -7,8 +7,8 @@
                 <strong>{{.Title}}</strong>
                 <span>#{{.ID}}</span>
             </div>
-            <pre>Name: <code>{{.Name}}</code></pre>
-            <pre>URL: <code>{{.URL}}</code></pre>
+            <pre>Name: <code><a href="/static/rss/{{.Name}}">{{.Name}}</a></code></pre>
+            <pre>URL: <code><a href="{{.Url}}">{{.Url}}</a></code></pre>
             <pre>Description: <code>{{.Description}}</code></pre>
             <pre></pre>
             <div class="metadata">
