added feed deletion url

--- a/ui/html/pages/create.tmpl
+++ b/ui/html/pages/create.tmpl
@@ -54,7 +54,7 @@
             <input type="text" name="link_elem" value="{{.Form.LinkSelector}}">
         </div>
         <div>
-            <label>Description Tag:</label>
+            <label>Description Selector:</label>
             {{with .Form.FieldErrors.descSelector}}
                 <label class="error">{{.}}</label>
             {{end}}
