added Dockerfile, updated logs and README

--- a/ui/html/pages/home.tmpl
+++ b/ui/html/pages/home.tmpl
@@ -2,5 +2,7 @@
 
 {{define "main"}}
     <p>This application can be used to turn any website into RSS feed</p>
-    <p>It can be self hosted.</p>
+    <p>It can be self-hosted.</p>
+
+    <p>For more details please refer the README page <a href="https://github.com/rk1165/feedcreator/blob/main/README.md">here</a></p>
 {{end}}
